# BookBuddy

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/screenshots/: goodreads_library_export.csv
scripts/: capture_screenshots.py
src/: charts.py  data_processor.py  exceptions.py  llm_client.py  logging_config.py  prompts.py  types.py  ui_components.py
tests/: test_charts.py  test_data_processor.py  test_llm_client.py  test_prompts.py
tests/fixtures/: sample_goodreads.csv
